--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
-        android:id="@+id/password" />
+        android:id="@+id/password"
+        android:inputType="textPassword" />
 
     <Button
         android:layout_width="wrap_content"
