--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,20 +20,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:id="@+id/email" />
+        android:id="@+id/email_login" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
-        android:id="@+id/password"
+        android:id="@+id/pwd_login"
         android:inputType="textPassword" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Accedi"
-        android:id="@+id/accedi"/>
+        android:id="@+id/accedi_login"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
         android:text="Registrati"
         android:textSize="20dp"
         android:clickable="true"
-        android:id="@+id/registrati" />
+        android:id="@+id/registrati_login" />
 
 
 </LinearLayout>
