--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/layout"
+    android:id="@+id/register_layout"
     tools:context="io.eklesia.eklesia.RegisterActivity">
 
 
@@ -21,50 +21,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nome"
-        android:id="@+id/nome"/>
+        android:id="@+id/nome_register"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Cognome"
-        android:id="@+id/cognome"/>
+        android:id="@+id/cognome_register"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:id="@+id/email_reg"/>
+        android:id="@+id/email_register"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
-        android:id="@+id/pwd"
+        android:id="@+id/pwd_register"
         android:inputType="textPassword" />
 
     <EditText
+        android:id="@+id/data_nascita_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Data di nascita"
-        android:id="@+id/data_nascita"
-        android:inputType="date"/>
+        android:inputType="date" />
 <!---
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:id="@+id/sesso">
+        android:id="@+id/sesso_register">
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Maschio"
-            android:id="@+id/m" />
+            android:id="@+id/m_register" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Femmina"
-            android:id="@+id/f" />
+            android:id="@+id/f_register" />
     </RadioGroup>
 
     -->
@@ -72,25 +72,25 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/sesso"
+        android:id="@+id/sesso_register"
         android:hint="Sesso"/>
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add_photo"
-        android:id="@+id/add_photo"/>
+        android:id="@+id/add_photo_register"/>
 
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:id="@+id/pic"/>
+        android:id="@+id/pic_register"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registrati"
-        android:id="@+id/conferma_reg"/>
+        android:id="@+id/conferma_register"/>
 
 
 </LinearLayout>
