--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,43 +5,70 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:paddingVertical="15dp"
+    android:paddingHorizontal="30dp"
     android:layout_height="match_parent"
     android:id="@+id/login_layout"
     tools:context="io.eklesia.eklesia.LoginActivity"
     android:orientation="vertical">
-
     <TextView
         android:layout_width="wrap_content"
+        android:text="BENVENUTO!"
+        android:textColor="@color/colorPrimary"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:textSize="25dp"/>
-
-    <EditText
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        style="@style/TextAppearance.AppCompat.Display2"/>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/email_text_input_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
-        android:id="@+id/email_login" />
+        app:errorEnabled="true">
 
-    <EditText
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/email_edit_text_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/stringa_email"
+            android:inputType="text"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/password_text_input_login"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:id="@+id/pwd_login"
-        android:inputType="textPassword" />
+        app:errorEnabled="true"
+        app:passwordToggleEnabled="true"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Accedi"
-        android:id="@+id/accedi_login"/>
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/password_edit_text_login"
+            android:layout_width="match_parent"
+            android:inputType="textPassword"
+            android:hint="@string/stringa_password"
+            android:layout_height="wrap_content"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registrati"
-        android:textSize="20dp"
-        android:clickable="true"
-        android:id="@+id/registrati_login" />
+    </android.support.design.widget.TextInputLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            style="?android:attr/borderlessButtonStyle"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Accedi"
+            android:id="@+id/accedi_login"/>
+        <Button
+            style="?android:attr/borderlessButtonStyle"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Registrati"
+            android:id="@+id/registrati_login"/>
+    </LinearLayout>
 
 
 </LinearLayout>
