--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,7 @@
     android:id="@+id/login_layout"
     tools:context="io.eklesia.eklesia.LoginActivity"
     android:orientation="vertical">
+
     <TextView
         android:layout_width="wrap_content"
         android:text="BENVENUTO!"
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         style="@style/TextAppearance.AppCompat.Display2"/>
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/email_text_input_login"
         android:layout_width="match_parent"
@@ -59,14 +61,14 @@
             android:textColor="@color/colorPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Accedi"
+            android:text="@string/stringa_accedi"
             android:id="@+id/accedi_login"/>
         <Button
             style="?android:attr/borderlessButtonStyle"
             android:textColor="@color/colorPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Registrati"
+            android:text="@string/stringa_registrati"
             android:id="@+id/registrati_login"/>
     </LinearLayout>
 
